fix scrollbar in ie11

--- a/src/ui/public/styles/bootstrap/responsive-utilities.less
+++ b/src/ui/public/styles/bootstrap/responsive-utilities.less
@@ -18,11 +18,6 @@
 // Source: http://timkadlec.com/2013/01/windows-phone-8-and-device-width/
 // Source: http://timkadlec.com/2012/10/ie10-snap-mode-and-responsive-design/
 
-@-ms-viewport {
-  width: device-width;
-}
-
-
 // Visibility utilities
 // Note: Deprecated .visible-xs, .visible-sm, .visible-md, and .visible-lg as of v3.2.0
 .visible-xs,
